src/components/dashboard.component.css
.dashboard-container {
  margin: auto;
  padding: 2rem;
  width: 65%;
}

h1 {
  margin-top: 10vh;
}

h2 {
  margin-bottom: 2vh;
}

p {
  margin-top: 1vh;
}

.file-upload {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#file-upload-section {
}

